--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,1 @@
-body { background-color: #3298bc; }
-
-/*# sourceMappingURL=style.css.map */
+body{background-color:#3298bc;color:#fff}.card{margin:10px}.card .card-body{background-color:#32bc56;height:100%;color:#fff}.card:first-child{background-color:#bc3245}button{margin-top:10px;margin-left:4px;margin-bottom:10px;margin-right:4px}#home h3{margin-top:20px;margin-left:0px;margin-bottom:20px;margin-right:0px}
