--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,5 +1,12 @@
 //variables
 
 $blue: #3298bc;
-$orange: #bc5632;
-$base-color: #c6538c;
+$red: #bc3245;
+$green: #32bc56;
+$white: white;
+
+$marginX: 10px;
+$marginY: 4px;
+
+$marginXHome: $marginX * 2;
+$marginYHome: 0px;
